Implemented cat skills and fixed delete cat
